# aws-costs

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  aws-costs.envfile  pyproject.toml  pyproject.toml.bak  pyrightconfig.json
aws_costs/: __version__.py  costs.py
tests/: test_costs.py
