[tool.poetry]
name = "aws-costs"
version = "0.3.1"
description = "View AWS Cost and Usage report on a per-month basis"
authors = ["Jon Mark Allen <ubahmapk@gmail.com>"]
readme = "README.md"
packages = [{include = "aws_costs"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: AWS CDK",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.11"
arrow = "^1.2.3"
babel = "^2.12.1"
boto3 = "^1.28.51"
click = "^8.1.7"

[tool.poetry.scripts]
aws-costs = "aws_costs.costs:cli"

[tool.poetry.group.dev.dependencies]
ipython = "^8.15.0"
black = "^23.10.1"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
