[project]
name = "aws-costs"
version = "0.4.1"
description = "View AWS Cost and Usage report on a per-month basis"
readme = "README.md"
authors = [
    { name = "Jon Mark Allen", email = "ubahmapk@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "arrow>=1.3.0",
    "babel>=2.16.0",
    "boto3>=1.35.81",
    "loguru>=0.7.3",
    "pydantic-settings>=2.7.0",
    "typer>=0.15.1",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: AWS CDK",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Utilities",
]

[dependency-groups]
dev = [
    "hatchling>=1.26.3",
    "ipython>=8.30.0",
    "pre-commit>=4.0.1",
    "pyright>=1.1.396",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.8.3",
    "vermin>=1.6.0",
]

[project.scripts]
aws-costs = "aws_costs.costs:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
